2002-03-28  Richard Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.c (peditor_image_clicked_cb): Set
	fsel to modal, it seems to fix a weird grabbing bug.

2003-03-26  Kjartan Maraas  <kmaraas@gnome.org>

	* activate-settings-daemon.c: Fix a string.
	
2002-03-25  Lauris Kaplinski  <lauris@ximian.com>

	* gconf-property-editor.c (gconf_peditor_widget_set_guard): Test for NULL
	gconf value

2002-03-19  Richard Hestilow  <hestilow@ximian.com>

	* Makefile.am: Include libbackground (used for preview-file-selector).
	Change into a libtool library so we can link against libbackground.
	
	* gconf-property-editor.c:
	(peditor_enum_int_from_string): Added argument use_nick; set to true
	if the string was a nick.
	(peditor_enum_string_from_int): Use nick only if use_nick is true.
	(gconf_peditor_new_image): Added.
	(gconf_peditor_new_select_radio_with_enum): Added.
	(peditor_select_radio_value_changed): Reverse radio group.
	(peditor_select_radio_widget_changed): Reverse radio group.

2002-03-17  Kjartan Maraas  <kmaraas@gnome.org>

	* activate-settings-daemon.c: Mark a string. #include <config.h>
	
2002-03-17  Jonathan Blandford  <set EMAIL_ADDRESS environment variable>

	reviewed by: <delete if not using a buddy>

	* Makefile.am:
	* theme-common.c: (themes_common_list_add_dir),
	(theme_common_get_list), (theme_common_list_free):
	* theme-common.h:

2002-03-14  Richard Hestilow  <hestilow@ximian.com>

	* gconf-property-editor.c:
	(gconf_property_editor_new_option_menu_with_enum):
	(gconf_property_editor_new_enum_toggle): Added.
	(gconf_property_editor_new): Accept custom arguments from the
	editor "subclass".
	(gconf_property_editor_class_init): Add arguments "data"
	and "data-free-cb", for custom "subclass" data.
	(gconf_property_editor_finalize): Free custom data.
	(*_new): Add NULL at the end of gconf_property_editor_new.
	(guard_value_changed, peditor_widget_set_guard): Use the
	enum->boolean mapping if the gconf value is a string.
